kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-load-balancer-controller
  namespace: kube-system
spec:
  selector:
    app: app-ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
