kubernetes/proxy.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-proxy-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-proxy
  template:
    metadata:
      labels:
        app: app-proxy
    spec:
      volumes:
      - name: nginx-conf-volume
        configMap:
          name: proxy-nginx.conf

      containers:
      - name: app-reverse-proxy
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-conf-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf-data

---

apiVersion: v1
kind: Service
metadata:
  name: app-svc-proxy
spec:
  type: NodePort
  selector:
    app: app-proxy
  ports:
  - name: "http"
    port: 80
    targetPort: 80
    nodePort: 30003
